<resources>
    <string name="app_name">LoginFireBase</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mobile_number">Mobile number</string>
    <string name="update">Update</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend</string>
    <string name="_6_digits">6 digits</string>
    <string name="submit">submit</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>