<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragment.SignUpStep1Fragment">

    <EditText
        android:id="@+id/et_signUp_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_signUp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_signUp_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp" />


    <Button
        android:id="@+id/btn_signUp2_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/background_btn_next"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:text="@string/next" />

    <Button
        android:id="@+id/btn_signUp2_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/background_btn"
        android:padding="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

</LinearLayout>