<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="20dp"
    tools:context=".Fragment.SignUpStep4Fragment">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_signUp_mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_et"
            android:padding="20dp"
            android:layout_marginVertical="15dp"
            android:hint="@string/mobile_number"
            android:layout_weight="1"
            android:inputType="phone"
            />
        <TextView
            android:id="@+id/tv_signUp_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/colorBlue"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_signUp_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@color/colorBlue"
            android:padding="10dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_signUp_6digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_et"
        android:padding="20dp"
        android:layout_marginVertical="15dp"
        android:hint="@string/_6_digits"
        android:inputType="number"
        />


</LinearLayout>