<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">


    <ImageView
        android:id="@+id/img_SignIn_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/tv_SignIn_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorMaroon"
        android:textSize="18sp" />



    <EditText
        android:id="@+id/et_SignIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_SignIn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:padding="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="forgot my password!"
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:layout_marginBottom="40dp"
        />

    <Button
        android:id="@+id/btn_SignIn_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/background_btn"
        android:padding="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

</LinearLayout>