<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.SplashScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_splash_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tv_splash_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome"
            android:textColor="@color/colorMaroon"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_splash_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15sp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_splash_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>