<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragment.SignUpStep2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/et_signUp_FirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_et"
            android:padding="20dp"
            android:hint="@string/firstname"
            />

        <EditText
            android:id="@+id/et_signUp_LastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_et"
            android:padding="20dp"
            android:hint="@string/lastname"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_signUp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_et"
        android:padding="20dp"
        android:hint="@string/date_of_birth"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textSize="15sp"

            />

        <Spinner
            android:id="@+id/sp_signUp_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>