<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_splash_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tv_splash_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorMaroon"
            android:textSize="18sp" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager_signUp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
             />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:ci_drawable="@drawable/dot"
            app:ci_drawable_unselected="@drawable/dot_unselected"
            app:ci_gravity="center"
            app:ci_height="7.33dp"
            app:ci_orientation="horizontal"
            app:ci_width="7.33dp" />

        <Button
        android:id="@+id/btn_signUp_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/background_btn_next"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:text="@string/next" />
        <Button
            android:id="@+id/btn_signUp_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/background_btn_next"
            android:padding="20dp"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:text="Register new" />

        <Button
            android:id="@+id/btn_signUp_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/background_btn_next"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btn_signUp_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textAllCaps="false" />


    </LinearLayout>


</LinearLayout>